# verona-benchmarks

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  clean.sh  debug.sh  run.sh
computer-language-benchmarks-game/: CMakeLists.txt
computer-language-benchmarks-game/benchmarks/fannkuch-redux/: fannkuch-redux.cpp
computer-language-benchmarks-game/util/: bench.h  stats.h
jake/: CMakeLists.txt  benchmarker.cpp  rng.h  safe_print.h
jake/examples/: breakfast.h  breakfast_ideal.h  breakfast_ideal_polymorphic.h  generic_leader.h  leader_arbitrary.h  leader_dag.h  leader_dag_broken.h  leader_dag_no_mailbox.h  leader_multiple_starts.h  leader_multiple_starts_boc.h  leader_ring.h  leader_ring_boc.h  leader_ring_onlogn_bad.h  leader_ring_onlogn_boc.h  leader_tree.h  simple_broken.h
jake/examples/experimental/: leader.h  leader_dag_broken.h
jake/examples/timed/: filterruns.py  leader_ring_boc_timed.h  leader_ring_timed.h  timed.h
savina/: CMakeLists.txt  compare.md  savina.cpp
savina/actors/: benchmarks.h
savina/actors/concurrency/: banking.h  barber.h  bndbuffer.h  cigsmok.h  concdict.h  concsll.h  logmap.h  philosopher.h
savina/actors/custom/: generic_leader.h  leader.h  leader.verona  leader2.h  leader_dag.h  leader_dag_broken.h  safe_print.h  typecheck.h
savina/actors/micro/: big.h  chameneos.h  count.h  fib.h  fjcreate.h  fjthroughput.h  nop.h  pingpong.h  threadring.h
savina/actors/parallel/: apsp.h  filterbank.h  quicksort.h  radixsort.h  recmatmul.h  sieve.h  trapezoid.h
savina/boc/: benchmarks.h
savina/boc/concurrency/: banking.h  barber.h  bndbuffer.h  concdict.h  logmap.h  philosopher.h
savina/boc/custom/: dictler.h  ignore
savina/boc/micro/: chameneos.h  count.h  fib.h  fjcreate.h  fjthroughput.h
savina/boc/parallel/: quicksort.h  sieve.h  trapezoid.h
savina/verona-savina/: CMakeLists.txt
savina/verona-savina/savina/: savina.cpp
savina/verona-savina/savina/actors/: benchmarks.h
savina/verona-savina/savina/actors/concurrency/: banking.h  cigsmok.h
savina/verona-savina/savina/actors/parallel/: apsp.h
savina/verona-savina/savina/util/: bench.h  random.h
scripts/: README.md  gen_latex.py  gen_latex2.py  loc.py  plot.py  produce_graph_banking_scale.py  produce_graph_dining.py  produce_table_actor.py  produce_table_boc_full.py  run_dining.py  run_savina.py  scale_graph.py  table.py
util/: bench.h  random.h
